@@ -17,7 +17,7 @@
 
 #define SHOW_HEADERS "From Subject Date Message-ID"
 
-#define MAILCOMMAND "mailto:$TO?Subject=$SUBJECT%26In-Reply-To=%26lt;$ID&gt;"
+#define MAILCOMMAND "mailto:$TO?Subject=$SUBJECT"
 
 #define PROGRESS 0
 
